fix for wrapping sidebar active

--- a/sites/all/themes/custom/cchi_v2/sass/custom.sass
+++ b/sites/all/themes/custom/cchi_v2/sass/custom.sass
@@ -171,7 +171,7 @@ p
       background-color: $yellow
       padding: 0.6rem 0 0.6rem 1rem
       margin-left: -1rem
-      margin-right: 2.8rem
+      margin-right: 2.4rem
       color: $black
       
       &:hover
